force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/In_Manager_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Manager_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Manager Forecast</label>
    <type>Checkbox</type>
</CustomField>