force-app/main/default/objects/Solution_Selling_Snapshot__c/fields/Last_Entered_Pre_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Entered_Pre_Shopping_Date__c</fullName>
    <label>Last Entered Pre-Shopping Date</label>
    <type>Date</type>
</CustomField>